--- a/.env.sample
+++ b/.env.sample
@@ -41,13 +41,11 @@ GOOGLE_ANALYTICS_ID=
 BUGSNAG_KEY=
 GITHUB_ACCESS_TOKEN=
 
-# AWS credentials (optional in development)
-AWS_ACCESS_KEY_ID=get_a_key_from_aws
-AWS_SECRET_ACCESS_KEY=get_the_secret_of_above_key
-AWS_REGION=xx-xxxx-x
-AWS_S3_UPLOAD_BUCKET_URL=http://s3:4569
-AWS_S3_UPLOAD_BUCKET_NAME=bucket_name_here
-AWS_S3_UPLOAD_MAX_SIZE=26214400
+# QINIU
+QINIU_ACCESS_KEY=
+QINIU_SECRET_KEY=
+QINIU_DOMAIN=
+QINIU_BUCKET=
 
 # Emails configuration (optional)
 SMTP_HOST=
