--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "koa-jwt": "^3.6.0",
     "koa-logger": "^2.0.1",
     "koa-mount": "^3.0.0",
+    "koa-multer": "1.0.2",
     "koa-onerror": "^4.0.0",
     "koa-router": "7.0.1",
     "koa-sendfile": "2.0.0",
@@ -123,6 +124,7 @@
     "pg": "^6.1.5",
     "pg-hstore": "2.3.2",
     "polished": "1.2.1",
+    "qiniu": "7.2.2",
     "query-string": "^4.3.4",
     "randomstring": "1.1.5",
     "raw-loader": "^0.5.1",
