Modify styles and add doc prefix to uploaded assets

--- a/.env.sample
+++ b/.env.sample
@@ -24,6 +24,10 @@ SLACK_SECRET=get_the_secret_of_above_key
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+GITHUB_KEY=
+GITHUB_SECRET=
+
 # Comma separated list of domains to be allowed (optional)
 # If not set, all Google apps domains are allowed by default
 GOOGLE_ALLOWED_DOMAINS=
