Add github whitelist

--- a/.env.sample
+++ b/.env.sample
@@ -27,6 +27,7 @@ GOOGLE_CLIENT_SECRET=
 
 GITHUB_KEY=
 GITHUB_SECRET=
+GITHUB_WHITELIST=
 
 # Comma separated list of domains to be allowed (optional)
 # If not set, all Google apps domains are allowed by default
